<resources>
    <string name="use_current_location">Sử dụng vị trí hiện tại</string>
    <string name="app_name">Weather App</string>
    <string name="allow_location_access">Cho phép truy cập vị trí thiết bị của bạn</string>
    <string name="accept">OK</string>
    <string name="manual_search">Tìm kiếm thủ công</string>
    <string name="search_hint">Tìm kiếm theo tên thành phố...</string>
    <string name="cancel">Hủy</string>
    <string name="use_your_location">Vị trí của bạn</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="weather_icon">Weather icon</string>
    <string name="weather_name">Hải Châu</string>
    <string name="wind_speed">Tốc độ gió</string>
    <string name="humidity">Độ ẩm</string>
    <string name="weather_forecast">Dự báo thời tiết</string>
    <string name="forecast">Dự báo</string>
    <string name="hourly_forecast">Theo giờ</string>
    <string name="daily_forecast">Dự báo</string>
    <string name="globe_icon">Globe icon</string>
    <string name="location_icon">Location icon</string>
    <string name="wind_icon">Wind icon</string>
    <string name="humidity_icon">Humidity icon</string>
    <string name="weather_alert">Cảnh báo thời tiết</string>
    <string name="alert_icon">Alert icon</string>
    <string name="recommendations">Khuyến nghị</string>
    <string name="monitoring_weather">Đang theo dõi thời tiết</string>
    <string name="channel_name">Weather Alerts</string>
    <string name="channel_description">Notifications for severe weather alerts</string>





</resources>